--- a/georentate_app/app/src/main/res/values/strings.xml
+++ b/georentate_app/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="facebook_application_id">442246306616356</string>
     <string name="fb_login_protocol_scheme">fb442246306616356</string>
+    <string name="api_key">AIzaSyCLZSVZqJpseuX262cjNikvCkaxvIANUdo</string>
 
 
 </resources>
